# SteveAI

./: .gitignore  .pre-commit-config.yaml  API_DOCUMENTATION.md  CHANGELOG.md  Dockerfile  Makefile  QUICKSTART.md  README.md  config.yaml  docker-compose.yml  pyproject.toml  requirements.txt  setup.py  teacher_inference_gpu.py
.github/workflows/: ci.yml
examples/: advanced_usage.py  basic_usage.py
scripts/: teacher_inference.py
steveai/: __init__.py
steveai/core/: __init__.py  data_utils.py  distillation_loss.py  student_training.py
steveai/deployment/: __init__.py  deploy.py
steveai/evaluation/: __init__.py  benchmark.py  evaluate.py
steveai/monitoring/: __init__.py  monitor_training.py
steveai/optimization/: __init__.py  optimize_model.py
steveai/tests/: __init__.py  run_tests.py  test_integration.py  test_performance.py  test_steveai.py
steveai/utils/: __init__.py  config_manager.py  model_utils.py  utils.py
steveai/visualization/: __init__.py  visualize_results.py
